CocacolaProject/src/objects/RFA__c.object
<CustomObject>
    <fields>
        <fullName>IsthisanAnnualCapitalPlanrequest__c</fullName>
        <inlineHelpText>年間資本計画の申請にフラグを付け、レポートで使用します。</inlineHelpText>
        <label>Is this an Annual Capital Plan request?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L2Function_Requester__c</fullName>
        <formula>CreatedBy.L2_Function_E__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2Function-Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCOACategorySubCategory__c</fullName>
        <inlineHelpText>The Local Chart of Authority (LCOA) category as determined by the BU/Group/Function.  This field is used in addition to the DOA categories or in rare cases when the DOA category does not apply.</inlineHelpText>
        <label>LCOA Category / Sub Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOC_Name__c</fullName>
        <label>LOC Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>【CCEJ】 Coca-Cola East Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CCCJ】Coca-Cola Central Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【FVCe】FV Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CJL】Central Japan Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CJT】Central Japan Techno Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Mikuni】Mikuni Coca-Cola Bottling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MFD】Mikuni Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MLO】Mikuni Logistics Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MVS】Mikuni Vending Machine Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MSE】Mikuni Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MWI】Mikuni Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Tokyo】Tokyo Coca-Cola Bottling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【FVS】Fresh Vender Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【WEX】WEX Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MMN】Machine Maintenance Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【UVX】Urban Vend-X Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Tone】Tone Coca-Cola Bottling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【EXS】EX-Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TLS】Tone Logistics Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TVS】Tone Vending Machine Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TXC】TX Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CCEJP】Coca-Cola East Japan Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NPVUSD__c</fullName>
        <inlineHelpText>正味現在価値</inlineHelpText>
        <label>NPV (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NameAddress_Entertainment1__c</fullName>
        <label>Name / Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAddress_Entertainment2__c</fullName>
        <description>Entertainment</description>
        <label>Name / Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAddress_Entertainment3__c</fullName>
        <description>Entertainment</description>
        <label>Name / Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Travel Expense</description>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_CCEJ_Attendees__c</fullName>
        <description>Entertainment</description>
        <label>Number of CCEJ Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Guest_Attendees__c</fullName>
        <description>Entertainment</description>
        <label>Number of Guest Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Nights__c</fullName>
        <formula>End_Date__c -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofUnitsofEquipment__c</fullName>
        <inlineHelpText>The number of units covered in the CAPPrs agreement.</inlineHelpText>
        <label>Number of Units of Equipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX_Amount__c</fullName>
        <inlineHelpText>CAPEX以外の費用（OPEX、DME)</inlineHelpText>
        <label>OPEX Amount (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectives_Rationale_Background__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Considerations_CPSP__c</fullName>
        <defaultValue>&quot;その他特記事項について記載します。&quot; +BR()+
&quot;　・複雑なスキームであったり特殊なケースの場合は会計処理方法を記載&quot; +BR()+
&quot;　・協働する関連部門・会社、（プロジェクト）推進体制、責任者を記載&quot; +BR()+
&quot;　・今後の主な予定（主要タイムラインやマイルストーン）を記載&quot; +BR()+
&quot;　・関連する承認申請（RFA）があればそのリンクを貼り付ける&quot; +BR()+
&quot;　・他部門、会社への考えられる影響を記載&quot; +BR()+
&quot;　・資金支出方法や資金調達方法を記載&quot; 

+BR()+BR()+

&quot;Describe accounting treatment for complex or unusual circumstances.&quot; +BR()+
&quot;Include department that is specifically accountable for ensuring expected results.&quot; +BR()+
&quot;Include implementation approach, timeline and milestones.&quot; +BR()+
&quot;Describe unique circumstances (e.g. reference to other RFAs or projects, potential impacts on customers, partners, etc.)&quot; +BR()+
&quot;Describe funding or financing source.&quot;</defaultValue>
        <label>Other Considerations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Considerations_G__c</fullName>
        <defaultValue>&quot;その他特記事項について記載します。&quot; +BR()+
&quot;　・複雑なスキームであったり特殊なケースの場合は会計処理方法を記載&quot; +BR()+ 
&quot;　・協働する関連部門・会社、（プロジェクト）推進体制、責任者を記載&quot; +BR()+
&quot;　・今後の主な予定（主要タイムラインやマイルストーン）を記載&quot; +BR()+
&quot;　・関連する承認申請（RFA）のリンクを貼り付け&quot; +BR()+
&quot;　・他部門、会社への考えられる影響を記載&quot;

+BR()+BR()+

&quot;Describe accounting treatment for complex or unusual circumstances.&quot; +BR()+
&quot;Include department that is specifically accountable for ensuring expected results.&quot; +BR()+
&quot;Include implementation approach, timeline and milestones.&quot; +BR()+
&quot;Describe unique circumstances (e.g. reference to other projects, potential impacts on customers, partners, etc.)&quot;</defaultValue>
        <label>Other Considerations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Considerations__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Supporting_Documents_CPSP__c</fullName>
        <defaultValue>&quot;ドラフトの契約書や見積書、実施計画書のファイルを添付&quot; +BR()+
&quot;（この申請書画面を保存後、下部にある「メモ＆添付ファイル」の欄に添付してください）&quot;

+BR()+BR()+

&quot;Provide other supporting documents, e.g. supplier/manufacturer production equipment cost quotes, copy of the draft purchase contract, indicating whether it has been checked by Legal.&quot;</defaultValue>
        <label>Other Supporting Documents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Supporting_Documents_G__c</fullName>
        <defaultValue>&quot;ドラフトの契約書や見積書、実施計画書のファイルを添付&quot; +BR()+
&quot;（この申請書画面を保存後、下部にある「メモ＆添付ファイル」の欄に添付してください）&quot;

+BR()+BR()+

&quot;Provide other supporting documents, e.g. overview of accounts receivable aging schedule&quot; +BR()+
&quot;Copy of the draft purchase contract, indicating whether it has been checked by Legal.&quot;</defaultValue>
        <label>Other Supporting Documents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Others_Entertainment__c</fullName>
        <description>Entertainment</description>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <description>Entertainment</description>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Name__c</fullName>
        <label>POC Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PerformanceReportingPeriodMonths__c</fullName>
        <inlineHelpText>The number of performance months covered by the CAPPrs agreement.</inlineHelpText>
        <label>Performance Reporting Period (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryCOACategory__c</fullName>
        <inlineHelpText>この申請について当てはまるCOAカテゴリーを最大3つまで選択して下さい。</inlineHelpText>
        <label>Primary COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory2__c</fullName>
        <label>Primary COA Sub Category 2</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Investment project Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Unbudgeted Capital Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Change of scope in the approved Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Intangible fixed assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory3__c</fullName>
        <label>Primary COA Sub Category 3</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory2__c</controllingField>
            <picklistValues>
                <fullName>a. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other intangible assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Funding by shift of funds from an approved current year Capital Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Inventory Count Adjustment (per location)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Write-offs and disposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Write-downs (incl. flush out)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. New location, Extension of existing location or Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Contract renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Budgeted : ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Vehicles (including Capital Leases) - Non-Budgeted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ≦ Total ￥ 50,000,000 and ≦ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Other - ＞ Total ￥ 50,000,000 or　＞ 3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Establishment of and changes to PTC - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Establishment of and changes to PTC - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Specific deviation or a new program to the approved PTC Concept - KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Specific deviation or a new program to the approved PTC Concept - Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Approval of periodic gross price list changes for whole KO and Non-KO products range or parts thereof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination of gross list price / local conditions for single SKUs - KO for existing packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination of gross list price / local conditions for single SKUs - KO for new packaging / product segments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d. Approval of material master request for Non-KO trading goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e. Approval of material master request for Non-KO other items</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f. Determination of gross list price for advertising material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>g. Approval of KO-material master request for cross territory sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Approval of transfer price for sales transactions with other bottlers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Annual approval of standard cost of sales (Intercompany transfer price within CCEJ group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Determination and Changes for specific articles during a period (within a year)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory__c</fullName>
        <label>Primary COA Sub Category 1</label>
        <picklist>
            <controllingField>PrimaryCOACategory__c</controllingField>
            <picklistValues>
                <fullName>A. Purchase of Fixed Assets (Capital Expenditures)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Disposal of Fixed Assets (Sale and write-off)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Transfer of Fixed Assets among consolidated CCEJ locations and operations (tangible and intangible assets)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Revaluation or Write-off of Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Operating Leases / Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Capital Leases(excluding Vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms &amp; Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Credit Terms / Policies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Operating Expenses within Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Operating Expenses in excess of Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Marketing Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. CCEJ One-time Integration Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. External Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Intercompany Loans (within CCEJ Group)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Derivative and other Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Cash Disbursements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Loans, Loan Guarantees and Guarantees for Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Recruitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Litigation, Termination and Dismissal of employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Compensation and Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E. Club Memberships and Other Memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F. Collective Labor Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Overtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H. Travel Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Charitable Donations and Political Related Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Social Amenities, Gifts, Entertainment, Congratulatory or Condolence money, and Other Courtesies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Supply, Purchase and Outsourcing Agreements (including Contract Manufacturing Arrangements)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProfitCenterName__c</fullName>
        <formula>ProfitCenterNumber__r.ProfitCenterName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>選択された収益センター番号に基づき、自動的に割り当てられます。</inlineHelpText>
        <label>Profit Center Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCenterNumberName__c</fullName>
        <formula>ProfitCenterNumber__r.Name  + &quot; - &quot; +  ProfitCenterName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Center Number/Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfitCenterNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>収益を生み、コストを回収するため自主独立体として指定された組織。承認申請に責任を持つPCを選んでください。</inlineHelpText>
        <label>Profit Center Number</label>
        <referenceTo>ProfitCenter__c</referenceTo>
        <relationshipLabel>RFA</relationshipLabel>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Travel Expense</description>
        <label>Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>REP_DaysInCapMgmtHold__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Capital Management Hold</description>
        <formula>IF( 
ISPICKVAL(Stage__c, &apos;Capital Management Hold&apos;), 
IF(
ISBLANK( TECH_TimeInCapMgmtHold__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInCapMgmtHold__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInCapMgmtHold__c/ (1000*60*60*24))
)

/*
IF( 
(LevelStage__c = &apos;Capital Management Hold&apos;),
IF(
ISBLANK( TECH_TimeInCapMgmtHold__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInCapMgmtHold__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInCapMgmtHold__c/ (1000*60*60*24))
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Capital Management Hold</inlineHelpText>
        <label>Days In Capital Management Hold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInDraft__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Draft</description>
        <formula>IF( 
ISPICKVAL(Stage__c, &apos;Draft&apos;), 
(NOW()-CreatedDate),
(TECH_TimeInDraft__c/ (1000*60*60*24))
)

/*
IF( 
(LevelStage__c = &apos;Draft&apos;),
(NOW()-CreatedDate),
(TECH_TimeInDraft__c/ (1000*60*60*24))
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Draft</inlineHelpText>
        <label>Days In Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInKeyOps__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Key Ops Circulation</description>
        <formula>IF( 
ISPICKVAL(Stage__c, &apos;Circulation&apos;), 
IF(
ISBLANK( TECH_TimeInKeyOpsCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsCirculation__c/ (1000*60*60*24))
)

/*
IF( 
(LevelStage__c = &apos;Key Operations Circulation&apos;),
IF(
ISBLANK( TECH_TimeInKeyOpsCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsCirculation__c/ (1000*60*60*24))
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Key Ops Circulation</inlineHelpText>
        <label>Days In Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPendBoardReview__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Pending Board Review</description>
        <formula>IF( 
ISPICKVAL(Stage__c, &apos;Pending Board Review&apos;), 
IF(
ISBLANK( TECH_TimeInPendBoardReview__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInPendBoardReview__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInPendBoardReview__c/ (1000*60*60*24))
)

/*
IF( 
(LevelStage__c = &apos;Pending Board Review&apos;),
IF(
ISBLANK( TECH_TimeInPendBoardReview__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInPendBoardReview__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInPendBoardReview__c/ (1000*60*60*24))
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Pending Board Review</inlineHelpText>
        <label>Days In Pending Board Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPostKeyOps__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Key Ops Post-Circulation</description>
        <formula>IF( 
 ISPICKVAL(Stage__c, &apos;Post-Circulation&apos;), 
IF(
ISBLANK( TECH_TimeInKeyOpsPostCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsPostCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsPostCirculation__c/ (1000*60*60*24))
)

/*
IF( 
(LevelStage__c = &apos;Key Operations Post-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInKeyOpsPostCirculation__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsPostCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsPostCirculation__c/ (1000*60*60*24))
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Post-Key Ops Analysis</inlineHelpText>
        <label>Days In Post-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInPreKeyOps__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Key Ops Pre-Circulation</description>
        <formula>IF( 
ISPICKVAL(Stage__c, &apos;Pre-Circulation&apos;), 
IF(
ISBLANK( TECH_TimeInKeyOpsPreCirculation__c ), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsPreCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsPreCirculation__c / (1000*60*60*24))
)

/*
IF( 
(LevelStage__c = &apos;Key Operations Pre-Circulation&apos;),
IF(
ISBLANK( TECH_TimeInKeyOpsPreCirculation__c ), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInKeyOpsPreCirculation__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInKeyOpsPreCirculation__c / (1000*60*60*24))
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Pre-Key Ops Circulation</inlineHelpText>
        <label>Days In Key Operations Pre-Circulation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_DaysInReturnToSender__c</fullName>
        <description>RFA R1 - The number of days the RFA spent in Return to Sender</description>
        <formula>IF( 
ISPICKVAL(Stage__c, &apos;Return To Sender&apos;),
IF(
ISBLANK( TECH_TimeInReturnToSender__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInReturnToSender__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInReturnToSender__c/ (1000*60*60*24))
)

/*
IF( 
(LevelStage__c = &apos;Return To Sender&apos;),
IF(
ISBLANK( TECH_TimeInReturnToSender__c), 
(NOW() - TECH_LastStatusChangeDate__c ),
((TECH_TimeInReturnToSender__c/(1000*60*60*24))+ (NOW() - TECH_LastStatusChangeDate__c ))
),
(TECH_TimeInReturnToSender__c/ (1000*60*60*24))
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the RFA spent in Return to Sender</inlineHelpText>
        <label>Days In Return To Sender</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>